[e5bd6f05f89803aa4e4841f904b9e12ad4ab2544]: Merge pull request #68 from DeveloperCielo/tsaitobraspag-patch-12
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -16186,6 +16186,144 @@ Eles indicam, por exemplo, se uma transação com <code class="highlighter-rouge
   </tbody>
 </table>
 
+<h2 id="códigos-de-retorno-da-captura">Códigos de retorno da Captura</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Return Code</th>
+      <th>Return Message</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>6</td>
+      <td>Transacao capturada com sucesso</td>
+    </tr>
+    <tr>
+      <td>001</td>
+      <td>Mensagem inválida</td>
+    </tr>
+    <tr>
+      <td>002</td>
+      <td>Credenciais inválidas</td>
+    </tr>
+    <tr>
+      <td>003</td>
+      <td>Transação inexistente</td>
+    </tr>
+    <tr>
+      <td>030</td>
+      <td>O status da transacao nao permite captura</td>
+    </tr>
+    <tr>
+      <td>031</td>
+      <td>Prazo de captura vencido</td>
+    </tr>
+    <tr>
+      <td>032</td>
+      <td>Valor de captura invalido</td>
+    </tr>
+    <tr>
+      <td>033</td>
+      <td>Falha ao capturar</td>
+    </tr>
+    <tr>
+      <td>097</td>
+      <td>Sistema indisponível</td>
+    </tr>
+    <tr>
+      <td>098</td>
+      <td>Timeout</td>
+    </tr>
+    <tr>
+      <td>099</td>
+      <td>Erro inesperado</td>
+    </tr>
+  </tbody>
+</table>
+
+<h2 id="códigos-de-retorno-do-cancelamento-e-estorno">Códigos de retorno do Cancelamento e Estorno</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Return Code</th>
+      <th>Return Message</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>9</td>
+      <td>Transacao desfeita</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Transacao cancelada com sucesso</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Cancelamento parcial realizado com sucesso</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Nao foi possivel cancelar a Transacao</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>Nao foi possivel cancelar a Transacao</td>
+    </tr>
+    <tr>
+      <td>001</td>
+      <td>Mensagem inválida</td>
+    </tr>
+    <tr>
+      <td>002</td>
+      <td>Credenciais inválidas</td>
+    </tr>
+    <tr>
+      <td>003</td>
+      <td>Transação inexistente</td>
+    </tr>
+    <tr>
+      <td>040</td>
+      <td>Prazo de cancelamento vencido</td>
+    </tr>
+    <tr>
+      <td>041</td>
+      <td>Status nao permite cancelamento</td>
+    </tr>
+    <tr>
+      <td>042</td>
+      <td>Falha ao cancelar</td>
+    </tr>
+    <tr>
+      <td>043</td>
+      <td>Valor de cancelamento é maior que valor autorizado.</td>
+    </tr>
+    <tr>
+      <td>097</td>
+      <td>Sistema indisponível</td>
+    </tr>
+    <tr>
+      <td>098</td>
+      <td>Timeout</td>
+    </tr>
+    <tr>
+      <td>475</td>
+      <td>Tempo esgotado</td>
+    </tr>
+    <tr>
+      <td>845</td>
+      <td>Status nao permite cancelar</td>
+    </tr>
+    <tr>
+      <td>099</td>
+      <td>Erro inesperado</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="anexos">Anexos</h1>
 
 <h2 id="configurações-da-afiliação">Configurações da Afiliação.</h2>
