[a261f5f91da127dcd96e6c5bc79bb59b266a2750]: Update 2017-01-01-cielo-lio.md
Adição imagem da BLUE

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -133,9 +133,10 @@
 
 <h2 id="modelos-disponíveis-da-cielo-lio">Modelos disponíveis da Cielo LIO</h2>
 
-<p>Atualmente a Cielo LIO está disponível em 2 modelos: LIO V1 e LIO V2</p>
+<p>Atualmente a Cielo LIO está disponível em 3 modelos: LIO V1, LIO V2 e LIO +</p>
 
-<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v1_v2.png" alt="Comparação - LIO V1 e LIO V2" /></p>
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v1_v2.png" alt="Comparação - LIO V1 e LIO V2" />
+<img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/blue_lio.png" alt="BLUE" /></p>
 
 <p>Ambos os modelos foram desenvolvidos pela Cielo pensando em atender as necessidades específicas de alguns clientes.</p>
 
