--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -204,6 +204,7 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <th> </th>
       <th><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v1_small.png" alt="LIO V1" /></th>
       <th><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v2_small.png" alt="LIO V2" /></th>
+      <th><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_small.png" alt="LIO V2" /></th>
     </tr>
   </thead>
   <tbody>
@@ -211,29 +212,41 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <td>Versão</td>
       <td><strong>LIO V1</strong></td>
       <td><strong>LIO V2</strong></td>
+      <td><strong>LIO +</strong></td>
     </tr>
     <tr>
       <td>Sistema operacional</td>
       <td>Android OS Cielo 5.1.1</td>
       <td>Android OS Cielo 6.0 (Marshmallow)</td>
+      <td>Android 8.1 Oreo</td>
     </tr>
     <tr>
       <td>Memória</td>
       <td>2GB LPDDR3</td>
       <td>1GB LPDDR3</td>
+      <td>2GB</td>
+    </tr>
+    <tr>
+      <td>Armazenamento</td>
+      <td>-</td>
+      <td>-</td>
+      <td>16GB expansível (80GB micro SD)</td>
     </tr>
     <tr>
       <td>Dual Chip</td>
       <td>Dual SIM Stand-by</td>
       <td>-</td>
+      <td>Dual Chip</td>
     </tr>
     <tr>
       <td>Tipo do SIM Card</td>
       <td>micro SIM (3FF)</td>
       <td>micro SIM (3FF)</td>
+      <td>micro SIM e/ou Nano SIM</td>
     </tr>
     <tr>
       <td>Frequência GSM Mhz</td>
+      <td>Quad-Band 850/900/1800/1900</td>
       <td>Quad-Band 850/900/1800/1900</td>
       <td>Quad-Band 850/900/1800/1900</td>
     </tr>
@@ -241,9 +254,11 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <td>Tamanho em polegadas</td>
       <td>5”</td>
       <td>5.5”</td>
+      <td>6”</td>
     </tr>
     <tr>
       <td>Tipo de tela</td>
+      <td>AMOLED</td>
       <td>AMOLED</td>
       <td>AMOLED</td>
     </tr>
@@ -251,24 +266,29 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <td>Resolução da tela</td>
       <td>720 x 1280 pixels</td>
       <td>720 x 1280 pixels</td>
+      <td>720 x 1440 pixels</td>
     </tr>
     <tr>
       <td>Densidade de pixels</td>
       <td>293 ppi</td>
       <td>267 ppi</td>
+      <td>268 ppi</td>
     </tr>
     <tr>
       <td>Câmera</td>
       <td>12.8 Mega Pixels</td>
       <td>13 Mega Pixels</td>
+      <td>12 Mega Pixels</td>
     </tr>
     <tr>
       <td>Resolução da câmera</td>
       <td>4128 x 3096 pixels</td>
       <td>4160 x 3120 pixels</td>
+      <td>4000 x 3000 pixels</td>
     </tr>
     <tr>
       <td>Flash</td>
+      <td>Flash LED</td>
       <td>Flash LED</td>
       <td>Flash LED</td>
     </tr>
@@ -276,29 +296,35 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <td>USB</td>
       <td>USB 2.0 Micro-B (Micro-USB) Somente Energia</td>
       <td>USB 2.0 Micro-B (Micro-USB) Somente Energia</td>
+      <td>Micro USB 2.0</td>
     </tr>
     <tr>
       <td>Bluetooth</td>
       <td>Versão 4.0 com A2DP</td>
       <td>Versão 4.0 com A2DP/LE</td>
+      <td>Versão 4.1 suporta LE</td>
     </tr>
     <tr>
       <td>WiFi</td>
       <td>802.11 a/b/g/n</td>
       <td>802.11 b/g/n</td>
+      <td>802.11b/g/n</td>
     </tr>
     <tr>
       <td>GPS</td>
       <td>A-GPS. GeoTagging</td>
+      <td>A-GPS</td>
       <td>A-GPS</td>
     </tr>
     <tr>
       <td>Sensores</td>
       <td>Acelerômetro, Proximidade e Luminosidade</td>
       <td>Acelerômetro, Proximidade e Luminosidade</td>
+      <td>Leitor de digitais, acelerômetro, luminosidade e proximidade</td>
     </tr>
     <tr>
       <td>Saída de áudio</td>
+      <td>Audio Jack 3.5mm</td>
       <td>Audio Jack 3.5mm</td>
       <td>Audio Jack 3.5mm</td>
     </tr>
@@ -306,21 +332,25 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <td>Peso</td>
       <td>363 g</td>
       <td>507 g</td>
+      <td>156 g</td>
     </tr>
     <tr>
       <td>Altura</td>
       <td>34mm</td>
       <td>46mm</td>
+      <td>9mm</td>
     </tr>
     <tr>
       <td>Largura</td>
       <td>84mm</td>
       <td>81mm</td>
+      <td>75mm</td>
     </tr>
     <tr>
       <td>Comprimento</td>
       <td>168mm</td>
       <td>228mm</td>
+      <td>158mm</td>
     </tr>
   </tbody>
 </table>
