[fbd5d08a32463f11f087a8d90874667baecc4f73]: Merge pull request #74 from DeveloperCielo/tsaitobraspag-patch-18
Update 2018-09-10-env3ds.md

--- a/manual/env3ds.html
+++ b/manual/env3ds.html
@@ -1083,7 +1083,7 @@
 
 <p>&lt;input type="button"onclick="bpmpi_authenticate()" /&gt;</p>
 
-<h2 id="etapa-de-autorização">Etapa de Autorização</h2>
+<h2 id="etapa-de-autorização-cielo-e-commerce-30">Etapa de Autorização (Cielo E-Commerce 3.0)</h2>
 
 <p>Após autenticação ser concluída, submete-se ao processo de autorização, enviando os dados de autenticação no modelo de "autenticação externa" (nó <strong>ExternalAuthentication</strong> ).
 Este procedimento é válido também para estabelecimentos que realizaram a autenticação fora da Cielo (MPI Externo).</p>
@@ -1207,6 +1207,8 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
 <h3 id="response-1">Response</h3>
 
 <p>Vide https://developercielo.github.io/manual/cielo-ecommerce#resposta</p>
+
+<h2 id="etapa-de-autorização-cielo-e-commerce-15">Etapa de Autorização (Cielo E-Commerce 1.5)</h2>
 
 <p>Veja exemplo abaixo, descrito o envio dos dados de autenticação da requisição de autorização da API Cielo 1.5. Os campos Version e ReferenceID serão disponibilizados em breve:</p>
 
