[a52afc006b3a95a72e218d8db5961f93f79567d4]: Merge pull request #75 from DeveloperCielo/tsaitobraspag-patch-19
Update 2018-09-10-env3ds.md

--- a/manual/env3ds.html
+++ b/manual/env3ds.html
@@ -1104,7 +1104,8 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
    </span><span class="p">{</span><span class="w">  
      </span><span class="err">(...)</span><span class="w">
      </span><span class="s2">"Provider"</span><span class="p">:</span><span class="s2">"Cielo30"</span><span class="p">,</span><span class="w">
-     </span><span class="s2">"Authenticate"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
+     </span><span class="s2">"Authenticate"</span><span class="p">:</span><span class="kc">true</span><span class="p">,</span><span class="w">
+     </span><span class="s2">"ReturnUrl"</span><span class="p">:</span><span class="s2">"http://www.loja.com.br"</span><span class="p">,</span><span class="w">
      </span><span class="s2">"CreditCard"</span><span class="p">:{</span><span class="w">  
          </span><span class="s2">"CardNumber"</span><span class="p">:</span><span class="s2">"4551870000000183"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"Holder"</span><span class="p">:</span><span class="s2">"Nome do Portador"</span><span class="p">,</span><span class="w">
@@ -1141,7 +1142,8 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
    <span class="o">{</span>  
      <span class="o">(</span>...<span class="o">)</span>
      <span class="s2">"Provider"</span>:<span class="s2">"Cielo30"</span>,
-     <span class="s2">"Authenticate"</span>:false,
+     <span class="s2">"Authenticate"</span>:true,
+     <span class="s2">"ReturnUrl"</span>:<span class="s2">"http://www.loja.com.br"</span>,
      <span class="s2">"CreditCard"</span>:<span class="o">{</span>  
          <span class="s2">"CardNumber"</span>:<span class="s2">"4551870000000183"</span>,
          <span class="s2">"Holder"</span>:<span class="s2">"Nome do Portador"</span>,
