--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -125,11 +125,19 @@
 
 <h1 id="visão-geral-da-plataforma">Visão Geral da Plataforma</h1>
 
-<h2 id="sobre">Sobre</h2>
+<h3 id="cielo-lio">Cielo LIO</h3>
 
-<p>A Cielo LIO é plataforma que fornece controle e gestão de negócios que vai além de um sistema de pagamentos tradicional. Essa plataforma suporta aplicativos desenvolvidos para sistema Android, incentivando desenvolvedores parceiros a criar aplicativos especializados para diversos segmentos (restaurantes, vestuário, cosméticos, combustível e outros) e, assim, permitindo que estabelecimentos comerciais escolham o aplicativo que melhor se adapte ao modelo de negócio da empresa.</p>
+<p>É uma plataforma aberta que fornece controle e gestão de negócios indo além de um sistema de pagamentos tradicional. Essa solução suporta aplicativos desenvolvidos para sistema Android, possibilitando que desenvolvedores parceiros possam criar aplicativos especializados para diversos segmentos e qualquer porte de cliente.</p>
 
-<p>Quer conhecer mais sobre o produto Cielo LIO? Acesse: http://cielolio.com.br</p>
+<p>A LIO conta com duas opções de hardware, com e sem impressão.</p>
+
+<h3 id="cielo-lio-1">Cielo LIO+</h3>
+
+<p>Solução 2 em 1,  a primeira do segmento a oferecer smartphone e maquininha de cartão em um único aparelho, com o objetivo de digitalizar o pequeno negócio.</p>
+
+<p>A Cielo LIO+ oferece mobilidade e praticidade ao vendedor. Isso porque ela é 2 em 1: o mesmo equipamento opera como um smartphone, com todas as suas funções de voz e aplicativos, e uma maquininha de cartão que se conecta de maneira rápida e intuitiva ao celular com um simples snap (encaixe magnético que oferece uma conexão imediata entre o celular e o módulo de pagamento), diferente das soluções que exigem o pareamento via bluetooth, por exemplo.</p>
+
+<p>Ambas contam com a Cielo Store, loja de aplicativos B2B disponível em todos as LIO´s, dando escala e distribuição para qualquer aplicativo integrado a ela.</p>
 
 <h2 id="modelos-disponíveis-da-cielo-lio">Modelos disponíveis da Cielo LIO</h2>
 
@@ -151,7 +159,7 @@ Papel Azul 48 gramas, Comprimento: 12 metros, Diâmetro máximo: 30 milímetros,
 
 <h2 id="arquitetura">Arquitetura</h2>
 
-<h3 id="sobre-1">Sobre</h3>
+<h3 id="sobre">Sobre</h3>
 
 <p>A plataforma Cielo LIO é baseada em Android que consiste em:</p>
 
@@ -627,7 +635,7 @@ Dessa forma, garante-se o funcionamento da aplicação no hardware da LIO V1 com
 
 <h2 id="cielo-lio-order-manager-sdk">Cielo Lio Order Manager SDK</h2>
 
-<h3 id="sobre-2">Sobre</h3>
+<h3 id="sobre-1">Sobre</h3>
 
 <p>O Cielo LIO Order Manager SDK é uma biblioteca Android desenvolvida com base na Cielo LIO Order Manager API, encapsulando a complexidade da comunicação REST em uma API fluente e amigável ao desenvolvedor e permitindo uma integração simples, rápida e segura com a plataforma Cielo LIO.</p>
 
@@ -3767,7 +3775,7 @@ Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO
 
 <h1 id="cielo-store">Cielo Store</h1>
 
-<h2 id="sobre-3">Sobre</h2>
+<h2 id="sobre-2">Sobre</h2>
 
 <p>A Cielo Store é a loja de aplicativos da Cielo LIO.</p>
 
@@ -3806,7 +3814,7 @@ Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO
 
 <h2 id="dev-console">Dev Console</h2>
 
-<h3 id="sobre-4">Sobre</h3>
+<h3 id="sobre-3">Sobre</h3>
 
 <p>O Dev Console é o ambiente exclusivo para o desenvolvedor realizar o upload e gestão dos aplicativos desenvolvidos para a Cielo LIO.</p>
 
