[822ebe8a539747b6039712f11d76f4365e2e1a20]: Update 2017-01-01-cielo-lio.md
Utilização e Usabilidade, adição da sugestão do Crashlytics

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -434,7 +434,7 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
 <h3 id="utilização-e-usabilidade">Utilização e Usabilidade</h3>
 
 <ul>
-  <li>Recomendamos aos desenvolvedores que integrem algum tipo de utilitário de relatório de falhas em seus produtos Android. Isso ajudará você a manter a consciência operacional do seu produto.</li>
+  <li>Recomendamos aos desenvolvedores que integrem algum tipo de utilitário de relatório de falhas em seus produtos Android. Isso ajudará você a manter a consciência operacional do seu produto. Sugerimos a utilização do <a href="http://try.crashlytics.com">Crashlytics</a></li>
   <li>Os desenvolvedores podem coletar métricas sobre o uso do seu aplicativo. Isso irá ajudá-los a construir melhores produtos e aumentar a conscientização a respeito de quaisquer questões impactantes.</li>
   <li>Garantir que o aplicativo funcione de forma otimizada, evitando que ocorram crash e demora na resposta por processamento da aplicação. Seu aplicativo será usado em condições de trabalho de ritmo rápido e dinâmico, portanto esforce-se para obter fluxos de trabalho claros, fáceis de usar e robustos, com o mínimo de passos possível.</li>
   <li>O design deve enfatizar clareza e acessibilidade – alto contraste, fontes legíveis, texto grande e entradas.</li>
