--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -479,8 +479,7 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
 
 <h2 id="versão-target-da-aplicação">Versão target da aplicação</h2>
 
-<p>Recomenda-se que o desenvolvedor utilize como versão target da aplicação o Android 5.1.1 (Lollipop).
-Dessa forma, garante-se o funcionamento da aplicação no hardware da LIO V1 como também no hardware da LIO V2.</p>
+<p>Recomenda-se que o desenvolvedor utilize para a Cielo LIO+ o APK target version 27 e versão mínima 22 (essa última para garantir compatibilidade com as demais soluções V1 e V2).</p>
 
 <h2 id="recursos-indisponíveis">Recursos Indisponíveis</h2>
 
