--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -427,8 +427,8 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
 <h3 id="recursos-de-imagem">Recursos de imagem</h3>
 
 <ul>
-  <li>Os ícones dos aplicativos devem ser recursos do mipmap.</li>
-  <li>Os ícones devem estar em conformidade com o dimensionamento padrão do Android (você pode usar geradores de ícones de terceiros para redimensionar seu logotipo): 192 × 192 (xxxhdpi).</li>
+  <li>Os ícones devem estar em conformidade com o dimensionamento padrão do Android</li>
+  <li>Seguir o <a href="https://developer.android.com/guide/practices/ui_guidelines/icon_design">Guideline do Android</a></li>
 </ul>
 
 <h3 id="utilização-e-usabilidade">Utilização e Usabilidade</h3>
