[d08eb8030731c0c5b0b55dd14bf6f3986df30f5b]: Update 2017-01-01-cielo-lio.md
Alteração Linguagem de Programação e Cielo OS

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -463,19 +463,13 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
 
 <h2 id="linguagem-de-programação">Linguagem de Programação</h2>
 
-<p>A Cielo LIO aceita aplicativos desenvolvidos em Java ou Kotlin.</p>
+<p>A Cielo LIO aceita aplicativos desenvolvidos em Java ou Kotlin, como linguagens oficiais. As demais linguagens são permitidas, porém é de responsabilidade do desenvolvedor.</p>
 
 <p>Recomendamos que essas linguagens sejam utilizadas para garantir o funcionamento e facilidade de integração com a Cielo LIO.</p>
 
 <h2 id="cielo-os">Cielo OS</h2>
 
 <p>O sistema operacional da plataforma Cielo LIO foi personalizado e, com isso, surgiu o Cielo OS, que é baseado em Android.</p>
-
-<p>Na LIO V1, o sistema operacional é baseado no Android 5.1.1 (API Level 22) e disponibiliza a maioria das APIs presentes no framework do Android.</p>
-
-<p>Na LIO V2, o sistema operacional é baseado no Android 6.0 (API Level 23) e disponibiliza a maioria das APIs presentes no framework do Android.</p>
-
-<p>Caso queira consultar quais APIs estão disponíveis, acesse https://developer.android.com/reference/packages.html e selecione “API Level 22” ou “API Level 23” no canto esquerdo da tela, de acordo com sua preferência.</p>
 
 <h2 id="versão-target-da-aplicação">Versão target da aplicação</h2>
 
