[d1b282e320b4f7260f28e8a3de3f9d150afb2a27]: Update 2017-01-01-cielo-lio.md
Alterações Especificações LIO +

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -274,7 +274,7 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <td>Resolução da tela</td>
       <td>720 x 1280 pixels</td>
       <td>720 x 1280 pixels</td>
-      <td>720 x 1440 pixels</td>
+      <td>LCD 6” HD+ 1440x720 pixels</td>
     </tr>
     <tr>
       <td>Densidade de pixels</td>
@@ -292,7 +292,7 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
       <td>Resolução da câmera</td>
       <td>4128 x 3096 pixels</td>
       <td>4160 x 3120 pixels</td>
-      <td>4000 x 3000 pixels</td>
+      <td>12MP LED flash Zoom digital x4 08MPLED flash Zoom digital x4</td>
     </tr>
     <tr>
       <td>Flash</td>
