[535c03a7f6aa768bfdc49e35d74121f80a2270f3]: Update 2017-01-01-cielo-lio.md
Alteração da Arquitetura

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -164,11 +164,11 @@ Papel Azul 48 gramas, Comprimento: 12 metros, Diâmetro máximo: 30 milímetros,
 <p>A plataforma Cielo LIO é baseada em Android que consiste em:</p>
 
 <ul>
-  <li>Uma loja de aplicativos (Cielo Store) para os desenvolvedores publicarem seus aplicativos e os disponibilizarem para os estabelecimentos comerciais (lojistas).</li>
+  <li>Uma loja de aplicativos <a href="https://developercielo.github.io/manual/cielo-lio#cielo-store">Cielo Store</a> para os desenvolvedores publicarem seus aplicativos e os disponibilizarem para os estabelecimentos comerciais (lojistas).</li>
   <li>Uma plataforma com arquitetura em nuvem e APIs REST que permite a integração com sistemas de automação comercial de parceiros.
- Acesse Documentação da Integração Remota</li>
+ Acesse Documentação da <a href="https://developercielo.github.io/manual/cielo-lio#integra%C3%A7%C3%A3o-remota">Integração Remota</a></li>
   <li>Um SDK para desenvolvimento em Android, de forma que aplicativos de parceiros possam se integrar com as funcionalidades de pagamento da Cielo LIO. 
-Acesse Documentação da Integração Local</li>
+Acesse Documentação da <a href="https://developercielo.github.io/manual/cielo-lio#integra%C3%A7%C3%A3o-local">Integração Local</a></li>
 </ul>
 
 <h3 id="modelos-de-integração-com-a-plataforma-cielo-lio">Modelos de integração com a plataforma Cielo LIO</h3>
