[99af475546bde9088efd1549999b746a40906fd2]: Update 2017-01-01-cielo-lio.md
Alteração Ambiente de Desenvolvimento

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -455,7 +455,8 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
 
 <h2 id="ambiente-de-desenvolvimento">Ambiente de Desenvolvimento</h2>
 
-<p>É necessário que você utilize uma IDE (Integrated Development Environment) para desenvolvimento do seu aplicativo. A Cielo recomenda que seja utilizada a IDE do Android Studio (versão 2.2.2 ou superior), visando garantir o funcionamento do aplicativo na plataforma Cielo LIO.</p>
+<p>A Cielo recomenda que seja utilizada a IDE do Android Studio (versão 2.2.2 ou superior), visando garantir o funcionamento do
+aplicativo na plataforma Cielo LIO.</p>
 
 <p>Para mais detalhes sobre a instalação e configuração do Android Studio, <a href="https://developer.android.com/index.html">clique aqui</a></p>
 
