--- a/manual/silent-order-post.html
+++ b/manual/silent-order-post.html
@@ -159,7 +159,7 @@
 
 <p>a) O estabelecimento deverá solicitar um ticket (server to server) enviando um POST para a seguinte URL:</p>
 
-<p><strong>SANDBOX</strong>
+<p><strong>SANDBOX:</strong>
 <strong>https://transactionsandbox.pagador.com.br/post/api/public/v1/accesstoken?merchantid={mid_loja}</strong></p>
 
 <p><strong>PRODUÇÃO:</strong>
@@ -269,10 +269,10 @@
 <p>a) O estabelecimento deverá fazer o download de um script fornecido pela Cielo, e anexá-lo a sua página de checkout. Esse script permitirá à Cielo processar todas as informações de cartão sem intervenção do estabelecimento.
 O download poderá ser realizado a partir da seguinte URL:</p>
 
-<p><strong>SANDBOX</strong>
+<p><strong>SANDBOX:</strong>
 <strong>https://transactionsandbox.pagador.com.br/post/scripts/silentorderpost-1.0.min.js</strong></p>
 
-<p><strong>PRODUÇÃO</strong>
+<p><strong>PRODUÇÃO:</strong>
 <strong>https://transaction.cieloecommerce.cielo.com.br/post/scripts/silentorderpost-1.0.min.js</strong></p>
 
 <p>b) O estabelecimento deverá decorar seus inputs do formulário com as seguintes classes:</p>
