[17bcd7aaa0d4a6691710b9cc23fa1dd91813cf38]: Update 2003-03-03-anti-fraude-chargeback.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -314,9 +314,9 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:</p>
     </tr>
     <tr>
       <td>WiFi</td>
-      <td>802.11 a/b/g/n</td>
-      <td>802.11 b/g/n</td>
-      <td>802.11b/g/n</td>
+      <td>802.11 a/b/g/n (2.4GHz)</td>
+      <td>802.11 b/g/n (2.4GHz)</td>
+      <td>802.11b/g/n (2.4GHz)</td>
     </tr>
     <tr>
       <td>GPS</td>
