--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/manual/anti-fraude-chargeback">Prevenção contra Fraudes e Chargeback</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/manual/silent-order-post">Silent Order POST</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
