--- a/404.html
+++ b/404.html
@@ -86,7 +86,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/prevencao-fraudes">Prevenção contra Fraudes e Chargeback teste</a>
+                    <a href="https://developercielo.github.io/manual/prevencao-fraudes">Prevenção contra Fraudes e Chargeback</a>
                 </li>
             
             </ul>
