--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/prevencao-fraudes">Prevenção contra Fraudes e Chargeback teste</a>
+                    <a href="https://developercielo.github.io/manual/prevencao-fraudes">Prevenção contra Fraudes e Chargeback</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
             
